# statements

./: .gitignore  pyproject.toml
examples/: label_ideologies.py
examples/modules/ideology/: ideology.py  ideology_schema.json  ideology_template.md  parse_ideology.py
examples/modules/ideology_comparison/: ideology.py  ideology_schema.json  ideology_template.md  parse_ideology.py
examples/modules/ideology_logits/: ideology.py  ideology_schema.json  ideology_template.md  parse_ideology.py
lib/: chat_client.py  extractor.py
src/statements/: chat_client.py  exceptions.py  extractor.py  utils.py
